fix spacing

--- a/website/themes/uppy/source/css/_common.scss
+++ b/website/themes/uppy/source/css/_common.scss
@@ -234,7 +234,7 @@ hr {
   top: 0;
   left: 0;
   width: 100%;
-  height: 40px;
+  // height: 40px;
   z-index: 9;
   z-index: 2;
   padding-top: 15px;
